Updated script